--- a/style.css
+++ b/style.css
@@ -32,6 +32,17 @@ display: float-right;
     max-width: 100%;
     height: auto;
 
-
   }
-  
+   /* Coding Image at bottom of the page */
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+ 
+  @media screen and (max-width: 800px) {
+    .left, .main, .right {
+      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    } 
+  }
